--- a/.travis.yml
+++ b/.travis.yml
@@ -4,22 +4,9 @@ python:
   - "3.7"
   - "3.8"
 install:
-  - pip install apache-airflow boto3
+  - pip install apache-airflow boto3 pylint isort
 env:
-  - AIRFLOW__BATCH__REGION=us-west-1
-  - AIRFLOW__BATCH__JOB_NAME=some-job-name
-  - AIRFLOW__BATCH__JOB_QUEUE=some-job-queue
-  - AIRFLOW__BATCH__JOB_DEFINITION=some-job-def
-
-  - AIRFLOW__ECS_BATCH__REGION=us-west-1
-  - AIRFLOW__ECS_BATCH__CLUSTER=some-cluster
-  - AIRFLOW__ECS_BATCH__CONTAINER_NAME=some-container-name
-  - AIRFLOW__ECS_BATCH__TASK_DEFINITION=some-task-def
-  - AIRFLOW__ECS_BATCH__LAUNCH_TYPE=FARGATE
-  - AIRFLOW__ECS_BATCH__PLATFORM_VERSION=LATEST
-  - AIRFLOW__ECS_BATCH__ASSIGN_PUBLIC_IP=DISABLED
-  - AIRFLOW__ECS_BATCH__SECURITY_GROUPS=SG1,SG2
-  - AIRFLOW__ECS_BATCH__SUBNETS=SUB1,SUB2
+  - AIRFLOW__BATCH__REGION=us-west-1 AIRFLOW__BATCH__JOB_NAME=some-job-name AIRFLOW__BATCH__JOB_QUEUE=some-job-queue AIRFLOW__BATCH__JOB_DEFINITION=some-job-def AIRFLOW__ECS_FARGATE__REGION=us-west-1 AIRFLOW__ECS_FARGATE__CLUSTER=some-cluster AIRFLOW__ECS_FARGATE__CONTAINER_NAME=some-container-name AIRFLOW__ECS_FARGATE__TASK_DEFINITION=some-task-def AIRFLOW__ECS_FARGATE__LAUNCH_TYPE=FARGATE AIRFLOW__ECS_FARGATE__PLATFORM_VERSION=LATEST AIRFLOW__ECS_FARGATE__ASSIGN_PUBLIC_IP=DISABLED AIRFLOW__ECS_FARGATE__SECURITY_GROUPS=SG1,SG2 AIRFLOW__ECS_FARGATE__SUBNETS=SUB1,SUB2
 script:
   - pylint --fail-under=9 ./airflow_aws_executors
   - isort -c -rc ./airflow_aws_executors
