--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,10 @@ python:
   - "3.6"      # current default Python on Travis CI
   - "3.7"
   - "3.8"
+addons:
+  apt_packages:
+    - sqlite3
+    - libsqlite3-dev
 install:
   - pip install apache-airflow boto3 pylint isort marshmallow
 env:
