--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Python package
+name: AWS Airflow Executor Tester
 
 on:
   push:
@@ -28,11 +28,11 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install pytest apache-airflow boto3 pylint isort marshmallow
-    - name: Lint with flake8
+    - name: Lint with Pylint
       run: |
-        # Pylint files
         pylint --fail-under=9 ./airflow_aws_executors
-        # ISort files
+    - name: Lint with ISort
+      run: |
         isort -c -rc ./airflow_aws_executors
     - name: Test with pytest
       run: |
